<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_2">

    <LinearLayout
        android:id="@+id/linearLayoutConfigure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/changeConfigure"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTerms"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/termsConfigure"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/reportConfigure"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/emailButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/emailConfigure"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/aboutMenu"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonInativate"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/inativateButton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>