<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/codeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/code"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/promptNewPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/confirmPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/sendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/save"
                        android:textColorHint="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
        </android.support.design.widget.TextInputLayout>


    </android.support.design.widget.TextInputLayout>
</LinearLayout>