<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changeLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHint="@color/colorBranco">

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="@color/colorAccent"
            android:backgroundTint="@color/colorBranco"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorBranco"
            android:textColorHint="@color/colorBranco" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBranco">

            <EditText
                android:id="@+id/newPasswordEditTextt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBranco"
                android:hint="@string/promptNewPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorBranco"
                android:textColorHint="@color/colorBranco" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorBranco">

                <EditText
                    android:id="@+id/confirmPasswordEditTextt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBranco"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBranco"
                    android:textColorHint="@color/colorBranco" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/saveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/save"
                        android:textColorHint="@color/colorBranco"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
        </android.support.design.widget.TextInputLayout>


    </android.support.design.widget.TextInputLayout>
</LinearLayout>